--- a/lesson-5/package.json
+++ b/lesson-5/package.json
@@ -6,5 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specifiec\" && exit 1",
     "start": "nodemon server.js"
+  },
+  "dependencies": {
+    "lodash": "^4.17.20"
   }
 }
