--- a/lesson-5and6/package.json
+++ b/lesson-5and6/package.json
@@ -1,11 +1,11 @@
 {
   "name": "lesson-5",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "app.js",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specifiec\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "express": "^4.17.1",
