--- a/jwt-app/package.json
+++ b/jwt-app/package.json
@@ -1,6 +1,14 @@
 {
   "name": "jwt-app",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemone app.js"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.9"
+  }
 }
